typescript first lecture

--- a/lecture1218/demo/index.html
+++ b/lecture1218/demo/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="out"></div>
     <script type="module" src="/src/tasks.ts"></script>
-    <script type="module" src="/src/demos.ts"></script>
+    <!-- <script type="module" src="/src/demos.ts"></script> -->
   </body>
 </html>
